<resources>
    <string name="app_name" translatable="false">Etopa</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="key">Key</string>
    <string name="etopa_instance">Etopa instance</string>
    <string name="default_instance" translatable="false">etopa.de</string>
    <string name="inputs_empty">Input fields are empty</string>
    <string name="pin" translatable="false">PIN</string>
    <string name="unlock">Unlock</string>
    <string name="set_pin">Set PIN</string>
    <string name="pin_set">PIN successfully set</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="incorrect_login">Incorrect login data</string>
    <string name="network_unreachable">Network unreachable</string>
    <string name="decryption_failed">Decryption failed</string>
    <string name="settings">Settings</string>
    <string name="licenses">Licenses</string>
    <string name="save">Save</string>
    <string name="settings_saved">Settings saved</string>
    <string name="token_format" translatable="false">%1$s %2$s</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="edit_secret">Edit secret</string>
    <string name="name">Name</string>
    <string name="delete_secret">Delete secret</string>
    <string name="type_secret_name">Type secret name</string>
    <string name="edit_var">\'%1$s\' edit</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="failed_error">Failed (unknown error)</string>
    <string name="secret_deleted">Secret deleted</string>
    <string name="sending_request">Sending request</string>
    <string name="success">Success</string>
    <string name="name_exists">Name already exists</string>
    <string name="add">Add</string>
    <string name="secret">Secret</string>
    <string name="secret_added">Secret added</string>
    <string name="account_registration">Account registration</string>
    <string name="invalid_secret">Invalid secret</string>
    <string name="cancel">Cancel</string>
    <string name="biometric_unlock">Biometric unlock</string>
    <string name="biometric_setup">Setup for biometric unlock</string>
    <string name="biometric_verify">Unlock using biometric authentication</string>
    <string name="biometric_error">Biometric unlock: %1$s</string>
    <string name="disable_biometric">Disable biometric login</string>
    <string name="permission_denied">Permission denied</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="change_username">Change username</string>
    <string name="new_username">New username</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="new_password_repeat">Repeat new password</string>
    <string name="new_key">New key</string>
    <string name="new_key_repeat">Repeat new key</string>
    <string name="change_key">Change key</string>
    <string name="delete_account">Delete account</string>
    <string name="key_account_deletion">Key for account deletion</string>
    <string name="account">Account</string>
    <string name="username_changed">Username changed</string>
    <string name="unknown_error">Unknown error</string>
    <string name="password_changed">Password changed</string>
    <string name="key_changed">Key changed</string>
    <string name="confirm_account_deletion">Confirm account deletion</string>
    <string name="invalid_key">Invalid key</string>
    <string name="account_deleted">Account deleted</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
</resources>
