<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_account"
        android:title="@string/account"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_licenses"
        android:title="@string/licenses"
        app:showAsAction="never"
        android:visible="false" />

</menu>