<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secret_new_name"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/elemHeight"
                android:hint="@string/name"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:imeOptions="actionNone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/rename_secret"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="@dimen/elemHeight"
                android:text="@string/rename"
                android:layout_marginBottom="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/delete_secret_check"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/elemHeight"
                android:text="@string/delete_secret" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/delete_secret_name"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/elemHeight"
                android:hint="@string/type_secret_name"
                android:layout_marginBottom="10dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:imeOptions="actionNone" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/delete_secret_confirm"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/elemHeight"
                android:text="@string/confirm_deletion"
                android:visibility="gone"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/delete_secret"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="@dimen/elemHeight"
                android:text="@string/delete_secret"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>