<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/key"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:hint="@string/key"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:onClick="loginClick"
                android:text="@string/login"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>