<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secret_name"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textShortMessage"
                    android:imeOptions="actionNone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secret_value"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:hint="@string/secret"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textShortMessage"
                    android:imeOptions="actionNone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_secret"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/add"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>